2008-11-19  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.h (enum mdb_fields): Add MDB_MTIME.
	(struct music_db_info): Add field mtime.
	* src/musicdb.c (struct info_cache_entry): Add field mtime.
	(music_db_get_info_internal): Return the mtime if requested.
	(meta_data_reader): If we successfully
	(worker_thread): When scanning the files, also check if their
	mtime has changed.  If so, add them to the DB->META_DATA_PENDING
	queue.

2008-11-12  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (starling_run): Disable searching in the
	ST->LIBRARY_VIEW and ST->QUEUE_VIEW.

	(try_seek): When printing the current length, cast it to an int.

	(starling_run): When printing ERR->MESSAGE, don't use it as the
	format, instead, use "%s".

2008-11-12  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (music_db_set_info_from_tags_internal): Always
	update the DATE_TAGS_UPDATED field.
	(meta_data_reader): Likewise.
	(worker_thread): Scan all local files for tags for which
	DATE_TAGS_UPDATED is NULL.

2008-11-11  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (music_db_set_info_from_tags_internal): Always at
	least update the date tags updated field.
	(meta_data_reader): Likewise.
	(worker_thread): Scan files for tags for which date_tags_updated
	is NULL.

2008-11-10  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (struct _MusicDB): Rename meta_data_reader_mutex
	to work_lock and change to a GMutex *.  Add fields worker, exit,
	work_cond, and dirs_pending.  Rename meta_data_reader_pending to
	meta_data_pending.  Update users.  Rename fs_scanner to
	worker_idle.  Update users.  Remove field meta_data_reader.
	(music_db_init): Initialize the thread package.  Initialize
	db->work_lock, db->work_cond, db->meta_data_pending and
	db->dirs_pending.
	(music_db_finalize): Join with the worker thread.  Destroy
	db->work_lock, db->work_cond, db->meta_data_pending and
	db->dirs_pending.
	(music_db_add): If we have added an entry to the queue, signal
	DB->WORK_COND.