@@ -1,5 +1,15 @@
 2008-11-19  Neal H. Walfield  <neal@gnu.org>
 
+	* configure.ac: Check for gst_bus_timed_pop_filtered and
+	gst_bus_timed_pop.
+	* src/gst_bus_timed_pop.c: New file.
+	* src/gst_bus_timed_pop_filtered.c: Likewise.
+	* src/Makefile.am (AM_CFLAGS): Add $(BASE_CFLAGS).
+	(starling_LDADD): Add $(LIBOBJS).
+	(starling_catalog_LDADD): Likewise.
+
+2008-11-19  Neal H. Walfield  <neal@gnu.org>
+
 	* src/musicdb.h (enum mdb_fields): Add MDB_MTIME.
 	(struct music_db_info): Add field mtime.
 	* src/musicdb.c (struct info_cache_entry): Add field mtime.
